@@ -3,7 +3,6 @@ package com.growit.app.todo.infrastructure.persistence.todos;
 import com.growit.app.todo.domain.ToDo;
 import com.growit.app.todo.infrastructure.persistence.todos.source.entity.ToDoEntity;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -35,17 +34,6 @@ public class ToDoDBMapper {
   }
 
   public List<ToDo> toDomainList(List<ToDoEntity> entities) {
-    return entities.stream()
-        .map(
-            entity ->
-                ToDo.builder()
-                    .id(entity.getUid())
-                    .goalId(entity.getGoalId())
-                    .planId(entity.getPlanId())
-                    .content(entity.getContent())
-                    .date(entity.getDate())
-                    .isCompleted(entity.isCompleted())
-                    .build())
-        .collect(Collectors.toList());
+    return entities.stream().map(this::toDomain).toList();
   }
 }
